@@ -5,8 +5,8 @@ APPDIR=/home/rgddata/pipelines/OntologyLoad
 cd $APPDIR
 
 if [ "$1" == "" ]; then
-  echo "Please enter a parameter for ontology id, for example RDO"
+  echo "Please enter a parameter for ontology id, for example RDO, or * for all public ontologies"
   exit -1
 fi
 
-$APPDIR/_run.sh -checkForCycles -single_ontology=$1 -skip_downloads -skip_stats_update
+$APPDIR/_run.sh -checkForCycles=$1
